WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267328
[GStreamer][WebRTC] WPT test RTCPeerConnection-restartIce.https.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=267328
Summary
[GStreamer][WebRTC] WPT test RTCPeerConnection-restartIce.https.html is crashing
Philippe Normand
Reported
2024-01-10 03:23:43 PST
Thread 1 (Thread 0x7f71992ccbc0 (LWP 1126378)): #0 g_logv (log_domain=0x7f71a359d030 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7ffc44a422c0) at ../glib/gmessages.c:1423 #1 0x00007f71a3470463 in g_log (log_domain=log_domain@entry=0x7f71a359d030 "GLib-GObject", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7f71a35a7810 "invalid (NULL) pointer instance") at ../glib/gmessages.c:1461 #2 0x00007f71a3594c9a in g_type_check_instance (type_instance=<optimized out>) at ../gobject/gtype.c:4302 #3 0x00007f71a358d0f1 in g_signal_emit_by_name (instance=0x0, detailed_signal=0x7f718f2e5cd0 "create-offer") at ../gobject/gsignal.c:3703 #4 0x00007f71a6dcbe1e in WebCore::GStreamerMediaEndpoint::initiate(bool, _GstStructure*) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #5 0x00007f71a68a2121 in WebCore::jsRTCPeerConnectionPrototypeFunction_restartIce(JSC::JSGlobalObject*, JSC::CallFrame*) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #6 0x00007f71414d4038 in ??? () #7 0x00007ffc44a425a0 in ??? () #8 0x00007f71a1df25f8 in js_trampoline_op_call_ignore_result () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-4.1.so.0 #9 0x0000000000000000 in ??? ()
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-01-10 04:05:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22579
EWS
Comment 2
2024-01-11 02:46:37 PST
Committed
272909@main
(62752b330f81): <
https://commits.webkit.org/272909@main
> Reviewed commits have been landed. Closing PR #22579 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-11 02:47:14 PST
<
rdar://problem/120836361
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug