[GStreamer][WebRTC] WPT test RTCPeerConnection-restartIce.https.html is crashing https://bugs.webkit.org/show_bug.cgi?id=267328

Reviewed by Xabier Rodriguez-Calvar.

Exit early from restartIce() in case there is no pipeline, addressing the crash. Also remove the
code triggering a new offer, that's not going to be sufficient, and is actually triggering ASSERTs
in Debug builds.
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::restartIce):

Canonical link: https://commits.webkit.org/272909@main